increase start heron search font weight

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div py:if="'checked' in repositoryAccess">
-      <a  class="promo-link" href="${i2b2_login_path}"><i class="fas fa-angle-double-right" style="color: #e8000d;"></i>Start HERON Search</a>
+      <a  class="promo-link" style="font-weight: 200;" href="${i2b2_login_path}"><i class="fas fa-angle-double-right" style="color: #e8000d;"></i>Start HERON Search</a>
     </div>
     
     <div py:if="'checked' not in repositoryAccess">
