--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -269,7 +269,7 @@
         <div class="col-10 col-md-6">
           <ul class="newsroom-links">
             <li><a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics.html" target="_blank" title="Medical Informatics Division">
-              Medical Informatics Division<i class="fas fa-chevron-right"></i></a>
+              Medical Informatics Division&nbsp;<i class="fas fa-chevron-right"></i></a>
             </li>
           </ul>
         </div>
