--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -56,7 +56,7 @@
                 <a tabindex="0" class="touch-link" aria-haspopup="true" title="Facilities &amp; Resources" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/facilities-and-resources.html">Facilities &amp; Resources</a>
               </li>
               <li class="">
-                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html">Frontiers</a>
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kufrontiers.org/">Frontiers</a>
                 </li>
               <li class="">
                 <a tabindex="0" class="touch-link" aria-haspopup="true" title="About the Medical Informatics division" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/about/faculty-and-staff.html">About</a>
@@ -214,7 +214,7 @@
         <div class="news-copy">
           <div class="x-up-card">
             <div class="parent-section-link">
-              <a href="https://heron.kumc.edu/heron/"><i class="fas fa-arrow-left"></i> Heron </a>
+              <a href="https://heron.kumc.edu/heron/" style="font-weight: bolder;"><i class="fas fa-arrow-left"></i> Heron </a>
             </div>
             <div class="content">
                 ${select(".//div[@class='news-copy']/*|text()")}
