--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -57,7 +57,7 @@
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="Facilities &amp; Resources" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/facilities-and-resources.html">Facilities &amp; Resources</a>
                 </li>
                 <li class="">
-                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/our-services/heron/frontiers-and-pioneers-registries.html">Frontiers</a>
+                  <a tabindex="0" class="touch-link" aria-haspopup="true" title="Frontiers" href="https://www.kufrontiers.org/">Frontiers</a>
                 </li>
                 <li class="">
                   <a tabindex="0" class="touch-link" aria-haspopup="true" title="About the Medical Informatics division" href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics/about/faculty-and-staff.html">About</a>
