--- a/heron_wsgi/templates/oops.html
+++ b/heron_wsgi/templates/oops.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
+      <xi:include href="heron_layout.xml" />
 <!-- <xi:include href="kumc_layout.xml" /> -->
 <head>
   <title>HERON: Oops!</title>
@@ -19,8 +20,8 @@
 <hr />
 <address>
 The HERON Team <a href="mailto:${admin_mailbox}">${admin_mailbox}</a><br />
-<a href="http://informatics.kumc.edu">Division of Medical Informatics</a>,<br />
-<a href="http://www.kumc.edu/miea.html">KUMC Center for Medical Informatics and Enterprise Analytics</a>,<br />
+<a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics.html">Division of Medical Informatics</a>,<br />
+<a href="https://www.kumc.edu/school-of-medicine/academics/departments/internal-medicine/divisions/medical-informatics.html">KUMC Center for Medical Informatics and Enterprise Analytics</a>,<br />
 </address>
 </body>
 </html>
