--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
-<xi:include href="heron_layout.xml" />
+  <xi:include href="heron_layout.xml" />
 <head>
   <title>HERON: Build List of People for use in Oversight Request</title>
 </head>
@@ -32,7 +32,7 @@
           <tr py:for="who in people">
             <td><input type="checkbox" name="${pfx}_${who.cn}" id="${pfx}_${who.cn}" /></td>
             <td><label for="${pfx}_${who.cn}">${who.sn}, ${who.givenname}</label></td>
-            <td><label for="${pfx}_${who.cn}"><tt>&lt;${who.mail}&gt;</tt><br /><small>userid: <tt>${who.cn}</tt></small></label></td>
+            <td><label for="${pfx}_${who.cn}"><tt>${who.mail}</tt><br /><small>userid: <tt>${who.cn}</tt></small></label></td>
             <td>${who.title}<br /><strong py:if="who.faculty_role()">Faculty</strong><strong py:if="who.cn in executives">Executive</strong></td>
             <td>${who.ou}</td>
           </tr>
@@ -145,7 +145,7 @@
       <div py:if="investigator">
         <dl><dt>Faculty Sponsor</dt>
           <dd>
-            ${investigator.givenname} ${investigator.sn} <tt>&lt;${investigator.mail}&gt;</tt><br />
+            ${investigator.givenname} ${investigator.sn} <tt>${investigator.mail}</tt><br />
             ${investigator.title}
           </dd>
         </dl>
