--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div py:if="'checked' in repositoryAccess">
-      <a  class="promo-link" style="font-weight: bolder; color: #971b2f;" href="${i2b2_login_path}"><i class="fas fa-angle-double-right" style="color: #0051ba;"></i>Start HERON Search</a>
+      <a  class="promo-link" style="font-weight: bolder; color: #e8000d;" href="${i2b2_login_path}"><i class="fas fa-angle-double-right" style="color: #0051ba;"></i>Start HERON Search</a>
     </div>
     
     <div py:if="'checked' not in repositoryAccess">
@@ -245,13 +245,13 @@
           <div class="card-body">
             <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
             <ul class="links">
-              <li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
+              <li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" target = "_blank" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
               <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
                 Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
                 Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
                 AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
               </li>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3000779/">Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2).</a></cite><br/>
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3000779/" target = "_blank">Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2).</a></cite><br/>
                 Murphy SN, Weber G, Mendis M, Gainer V, Chueh HC, Churchill S, Kohane I.<br/>
                 J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.
               </li>
@@ -259,7 +259,7 @@
             <p>Publications referencing HERON and the Greater Plains Collaborative (GPC) should also cite the GPC:</p>
   
             <ul>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4078294/">
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4078294/" target = "_blank">
                 The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></cite><br/>
               Lemuel R Waitman, Lauren S Aaronson, Prakash M Nadkarni, Daniel W Connolly, James R Campbell<br/>
               J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756
@@ -304,8 +304,7 @@
         <label>
           <input type="checkbox" disabled="disabled" py:attrs="trainingCurrent" />
         <a
-        href="https://kumed.sharepoint.com/sites/mykumc/compliance/Pages/CITI-Training-FAQs.aspx"
-        >Human subjects training</a> is complete and current?</label>
+        href="https://kumed.sharepoint.com/sites/mykumc/compliance/Pages/CITI-Training-FAQs.aspx" target = "_blank">Human subjects training</a> is complete and current?</label>
           <a py:if="not trainingCurrent" href="#training-records">*</a>
       </li>
 
@@ -331,8 +330,10 @@
         <br />expired  ${trainingLast.expired}.</strong>
     </p>
     <p py:if="not trainingCurrent">
-    <em id="training-records">*If you believe there is an error in your training records, please contact <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records"
-    >${admin_mailbox}</a>.</em>
+    <em id="training-records">
+      *If you believe there is an error in your training records, please contact 
+      <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records">${admin_mailbox}</a>.
+    </em>
     </p>
   
     <div class="header">
