--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -2,99 +2,110 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:py="http://genshi.edgewall.org/"
   xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="heron_layout.xml" />
 <head>
   <title>HERON Performance</title>
-  <link rel="stylesheet"
+  <!-- <link rel="stylesheet"
 	href="../av/d3LineChart.css" />
-  <link href="../av/tipsy.css" rel="stylesheet" type="text/css" />
+  <link href="../av/tipsy.css" rel="stylesheet" type="text/css" /> -->
 <!-- due to technique for integration with KUMC templates,
      style in the head gets ignored, so... -->
-  <style type="text/css">
-.COMPLETED { color: grey }
-.ERROR { color: red }
+  <!-- <style type="text/css">
+    .COMPLETED { color: grey }
+    .ERROR { color: red }
 
-table th { padding-right: 1em }
-.number { text-align: right }
+    table th { padding-right: 1em }
+    .number { text-align: right }
 
-table.report { width: 100% }
+    table.report { width: 100% }
 
-.report th, td { padding: 0 0.5em;
-  border-bottom: 1px solid #DDD;}
-.report .odd * {background: #EEE;}
+    .report th, td { padding: 0 0.5em;
+      border-bottom: 1px solid #DDD;}
+    .report .odd * {background: #EEE;}
 
-.chart div {
-   font: 10px sans-serif;
-   background-color: steelblue;
-   text-align: right;
-   padding: 3px;
-   margin: 1px;
-   color: white;
-}
+    .chart div {
+      font: 10px sans-serif;
+      background-color: steelblue;
+      text-align: right;
+      padding: 3px;
+      margin: 1px;
+      color: white;
+    }
 
-.choices li { list-style-type: none; }
-  </style>
-
+    .choices li { list-style-type: none; }
+  </style> -->
 </head>
 <body>
+  <div class="news-copy">
+    <div class="header">
+      <h1>HERON Performance</h1>
+    </div>
 
-<h1>HERON Performance</h1>
+    <div class="tray _call-out-tray _call-out-tray--yellow ">
+      <div class="call-out-content">
+        <div id="current_sessions">
+          <div class="header">
+            <h5>Current Sessions</h5>
+          </div>
+          
+          <table class="table text-wrap">
+            <thead>
+              <tr>
+                <th>Started</th>
+                <th>Name</th>
+                <th>User ID</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr py:for="s in current_sessions">
+                <td>${s.entry_date}</td>
+                <td>${s.full_name}</td>
+                <td>${s.user_id}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
-<div id="col-12 col-md-6">
+    <div id="recent_queries">
+      <div class="header">
+        <h5>Performance of Recent Queries</h5>
+      </div>
 
-<div id="current_sessions"><h2>Current Sessions</h2>
-<table class="report">
- <thead><tr>
-  <th>Started</th>
-  <th>Name</th>
-  <th>User ID</th>
- </tr></thead>
- <tbody>
-   <tr py:for="s in current_sessions">
-    <td>${s.entry_date}</td>
-    <td>${s.full_name}</td>
-    <td>${s.user_id}</td>
-   </tr>
- </tbody>
-</table>
+      <p>Current release: <strong>${current_release}</strong></p>
 
-</div>
+      <table class="table text-wrap" py:with="parity=cycle(('odd', 'even'))">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Created</th>
+            <th>Status</th>
+            <!-- this is gross, but I can't figure out how to do it with CSS -->
+            <th>Name<py:for each="i in range(1, 50)">&nbsp;</py:for></th>
+            <th>User</th>
+            <th>Groups</th>
+            <th>Terms</th>
+            <th>Elapsed</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr py:for="q in recent_query_performance" class="${q.status} ${parity.next()}">
+            <td>${q.query_master_id}</td>
+            <td>${q.create_date.strftime('%B %d %I:%M:%S%P')}</td>
+            <td>${q.status}<b py:if="q.result_type_id != 4">${q.result_type_description}</b></td>
+            <td>${q.name}</td>
+            <td>${q.user_id}</td>
+            <td>${len(q.request_xml.split('&lt;panel>')) - 1}</td>
+            <td>${len(q.request_xml.split('&lt;item>')) - 1}</td>
+            <td>${q.elapsed}</td>
+            <td>${'*' * int(1 + log(1 + q.elapsed.seconds, 2))}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-<div id="recent_queries"><h2>Performance of Recent Queries</h2>
-
-<p>Current release: <strong>${current_release}</strong></p>
-
-<table class="report" py:with="parity=cycle(('odd', 'even'))">
-  <thead>
-  <tr>
-    <th>ID</th>
-    <th>Created</th>
-    <th>Status</th>
-    <!-- this is gross, but I can't figure out how to do it with CSS -->
-    <th>Name<py:for each="i in range(1, 50)">&nbsp;</py:for></th>
-    <th>User</th>
-    <th>Groups</th><th>Terms</th>
-    <th colspan="2">Elapsed</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr py:for="q in recent_query_performance"
-      class="${q.status} ${parity.next()}">
-    <td>${q.query_master_id}</td>
-    <td>${q.create_date.strftime('%B %d %I:%M:%S%P')}</td>
-    <td>${q.status}
-        <b py:if="q.result_type_id != 4">${q.result_type_description}</b>
-    </td>
-    <td style="width: 40em">${q.name}</td>
-    <td>${q.user_id}</td>
-    <td class="number">${len(q.request_xml.split('&lt;panel>')) - 1}</td>
-    <td class="number">${len(q.request_xml.split('&lt;item>')) - 1}</td>
-    <td>${q.elapsed}</td>
-    <td>${'*' * int(1 + log(1 + q.elapsed.seconds, 2))}</td>
-  </tr>
-  </tbody>
-</table>
-</div>
-
+  </div>  
 <!--
 <div id="all_queries">
 
@@ -172,7 +183,6 @@ $('#update').click(update);
 </ul>
 
 -->
-</div>
 
 </body>
 </html>
