fix table format

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -311,8 +311,7 @@
       <li>
       <label>
         <input type="checkbox" disabled="disabled" py:attrs="signatureOnFile" />
-        Signed <a href="${saa_path if not signatureOnFile else saa_public}"
-        >system access agreement</a>?
+        Signed <a href="${saa_path if not signatureOnFile else saa_public}" target="_blank">system access agreement</a>?
       </label>
       </li>
     </ol>
@@ -340,14 +339,14 @@
       <h5>Data Use Agreement</h5>
     </div>
 
-    <p>The <a href="${dua_path}">HERON Data Use Agreement</a> must be signed by all study team members before extracted data can be released.</p>
+    <p>The <a href="${dua_path}" target="_blank">HERON Data Use Agreement</a> must be signed by all study team members before extracted data can be released.</p>
 
     <div class="header">
       <h5>Problems? Questions? Ideas?</h5>
     </div>
 
     <ul>
-      <li>Let us know what you think: <a href="https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1">Gripe/Praise</a></li>
+      <li>Let us know what you think: <a href="https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1" target="_blank">Gripe/Praise</a></li>
     </ul>
 
   </div>
