--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -68,42 +68,46 @@
       </div>
     </div>
 
-    <div id="recent_queries">
-      <div class="header">
-        <h5>Performance of Recent Queries</h5>
+    <div class="tray _call-out-tray _call-out-tray--blue tray--flush">
+      <div class="call-out-content">
+        <div id="recent_queries">
+          <div class="header">
+            <h5>Performance of Recent Queries</h5>
+          </div>
+
+          <p>Current release: <strong>${current_release}</strong></p>
+
+          <table class="table text-wrap" py:with="parity=cycle(('odd', 'even'))">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Created</th>
+                <th>Status</th>
+                <!-- this is gross, but I can't figure out how to do it with CSS -->
+                <th>Name<py:for each="i in range(1, 50)">&nbsp;</py:for></th>
+                <th>User</th>
+                <th>Groups</th>
+                <th>Terms</th>
+                <th>Elapsed</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr py:for="q in recent_query_performance" class="${q.status} ${parity.next()}">
+                <td>${q.query_master_id}</td>
+                <td>${q.create_date.strftime('%B %d %I:%M:%S%P')}</td>
+                <td>${q.status}<b py:if="q.result_type_id != 4">${q.result_type_description}</b></td>
+                <td>${q.name}</td>
+                <td>${q.user_id}</td>
+                <td>${len(q.request_xml.split('&lt;panel>')) - 1}</td>
+                <td>${len(q.request_xml.split('&lt;item>')) - 1}</td>
+                <td>${q.elapsed}</td>
+                <td>${'*' * int(1 + log(1 + q.elapsed.seconds, 2))}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-
-      <p>Current release: <strong>${current_release}</strong></p>
-
-      <table class="table text-wrap" py:with="parity=cycle(('odd', 'even'))">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Created</th>
-            <th>Status</th>
-            <!-- this is gross, but I can't figure out how to do it with CSS -->
-            <th>Name<py:for each="i in range(1, 50)">&nbsp;</py:for></th>
-            <th>User</th>
-            <th>Groups</th>
-            <th>Terms</th>
-            <th>Elapsed</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr py:for="q in recent_query_performance" class="${q.status} ${parity.next()}">
-            <td>${q.query_master_id}</td>
-            <td>${q.create_date.strftime('%B %d %I:%M:%S%P')}</td>
-            <td>${q.status}<b py:if="q.result_type_id != 4">${q.result_type_description}</b></td>
-            <td>${q.name}</td>
-            <td>${q.user_id}</td>
-            <td>${len(q.request_xml.split('&lt;panel>')) - 1}</td>
-            <td>${len(q.request_xml.split('&lt;item>')) - 1}</td>
-            <td>${q.elapsed}</td>
-            <td>${'*' * int(1 + log(1 + q.elapsed.seconds, 2))}</td>
-          </tr>
-        </tbody>
-      </table>
     </div>
 
   </div>  
