--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -19,12 +19,12 @@
     </ul>
 
     <div class="card">
-      <div class="card-header" id="by_user" aria-label="Open Queries by User accordion">
+      <div class="card-header" id="heading-7" aria-label="Open Queries by User accordion">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-7" aria-expanded="false" aria-controls="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-7">
           Queries by User
         </button>
       </div>
-      <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-7" class="collapse" aria-labelledby="by_user" data-parent="#accordion-parent">
+      <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-7" class="collapse" aria-labelledby="heading-7" data-parent="#accordion-parent">
         <div class="card-body">
           <div class="table-responsive">
             <table class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
@@ -60,14 +60,14 @@
     <!-- <div class="header">
       <h5 id="by_month">Queries by Month</h5>
     </div> -->
-
+    
     <div class="card">
-      <div class="card-header" id="by_month" aria-label="Open Queries by Month accordion">
+      <div class="card-header" id="heading-8" aria-label="Open Queries by Month accordion">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-8" aria-expanded="false" aria-controls="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-8">
           Queries by Month
         </button>
       </div>
-      <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-8" class="collapse" aria-labelledby="by_month" data-parent="#accordion-parent">
+      <div id="collapse-9e6ce07f1b734e228e3988cfaa8fe1e8-8" class="collapse" aria-labelledby="heading-8" data-parent="#accordion-parent">
         <div class="card-body">
           <div class="table-responsive">
             <table class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
