change table class

--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -23,7 +23,7 @@
     </div>
     
     <div class="table-responsive">
-      <table class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
+      <table class="table text-wrap" py:with="cls=cycle(('odd', 'even'))">
         <thead>
           <tr>
             <th>User</th>
@@ -55,7 +55,7 @@
     </div>
     
     <div class="table-responsive">
-      <table class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
+      <table class="table text-wrap" py:with="cls=cycle(('odd', 'even'))">
         <thead>
           <tr>
             <th>Year-Month</th>
