--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -246,7 +246,7 @@
             <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
             <ul class="links">
               <li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" target = "_blank" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
-              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
+              <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/" target="_blank">
                 Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
                 Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
                 AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
