--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -8,21 +8,31 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/fontawesome/css/all.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" />
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/icon-fonts.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/jquery-ui.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/target-firefox.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/main.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/Content/css/igxdev.css" />
   <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/kumc-custom.css" />
-  <script src="https://www.kumc.edu/Content/js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-popper.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-ui.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-bootstrap.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-match-height-min.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/Content/js/jquery-dataTables.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-slick-min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/Content/js/jquery-main.js" type="text/javascript"></script>
+  <script type="text/javascript"> 
+    //<![CDATA[
+      $(document).ready(function() {
+        $('#heron_table').DataTable();
+      });
+    //]]>
+  </script>
 </py:match>
 
 <py:match path="body" once="true">
