implement heron-data-table

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -18,7 +18,7 @@
     </div>
     
     <py:def function="peopleTable(people, pfx)">
-      <table id="heron_table" class="table text-wrap" style="width:100%" py:if="people">
+      <table id="heron-data-table" class="table text-wrap" style="width:100%" py:if="people">
         <thead>
           <tr>
             <th>Select</th>
@@ -48,7 +48,7 @@
           <br/>Expriation: ${study["Date Expiration"]}
           <br/>State: ${study["State"]}
         </p>
-        <table id="example" class="table text-wrap" style="width:100%">
+        <table id="heron-data-table" class="table text-wrap" style="width:100%">
           <thead>
             <tr>
               <th>Select</th>
