--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -27,7 +27,7 @@
   <script type="text/javascript"> 
     //<![CDATA[
       $(document).ready(function() {
-        $('#heron_table').DataTable();
+        $('#heron-data-table').DataTable();
       });
     //]]>
   </script>
