--- a/heron_wsgi/templates/query_status.html
+++ b/heron_wsgi/templates/query_status.html
@@ -19,7 +19,7 @@
       </h1>
     </div>
 
-    <table class="table text-wrap" py:with="cls=cycle(('odd', 'even'))">
+    <table id="heron-data-table" class="table text-wrap" py:with="cls=cycle(('odd', 'even'))">
       <thead>
         <tr>
           <th>User</th>
