--- a/heron_wsgi/templates/report2.html
+++ b/heron_wsgi/templates/report2.html
@@ -21,7 +21,7 @@
       <em>In the past 45 days, the following queriesfor patient sets had small (&lt;= 15) result sets:</em>
     </p>
 
-    <table class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;">
+    <table id="heron-data-table" class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;">
       <thead>
         <tr>
           <th>User</th>
