--- a/heron_wsgi/templates/performance.html
+++ b/heron_wsgi/templates/performance.html
@@ -77,7 +77,7 @@
 
           <p>Current release: <strong>${current_release}</strong></p>
 
-          <table id="heron-data-table" class="table text-wrap" py:with="parity=cycle(('odd', 'even'))">
+          <table id="heron-data-table-2" class="table text-wrap" py:with="parity=cycle(('odd', 'even'))">
             <thead>
               <tr>
                 <th>ID</th>
