--- a/heron_wsgi/templates/report1.html
+++ b/heron_wsgi/templates/report1.html
@@ -55,7 +55,7 @@
     </div>
     
     <div class="table-responsive">
-      <table id="heron-data-table" class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
+      <table id="heron-data-table-2" class="table table-standard" style="width: 100%; margin-left: auto; margin-right: auto;" py:with="cls=cycle(('odd', 'even'))">
         <thead>
           <tr>
             <th>Year-Month</th>
