--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -101,13 +101,17 @@
       </div> 
       <p>Look someone up by giving the first letters of their first name, last name, or KUMC id:
       <p>
-      <label>First: <input name='givenname' size="8"/></label>
-      <label>Last: <input name='sn' size="15"/></label>
-      <label>ID: <input name='cn' size="10"/></label>
-      <input class="button button-blue btn mt-6" type="submit" name='goal' value="Search" />
+        <div style="display:flex; flex-direction: row; justify-content: center; align-items: center">
+          <label>First: <input name='givenname' size="8"/></label>
+          <label>Last: <input name='sn' size="15"/></label>
+          <label>ID: <input name='cn' size="10"/></label>
+          <input class="button button-blue btn mt-6" type="submit" name='goal' value="Search" />
+        </div>
       </p>
-      <input type="hidden" name="uids" value="${uids}" />
-      <input py:if="investigator" type="hidden" name="investigator" value="${investigator.cn}" />
+        <div style="display:flex; flex-direction: row; justify-content: center; align-items: center">
+          <input type="hidden" name="uids" value="${uids}" />
+          <input py:if="investigator" type="hidden" name="investigator" value="${investigator.cn}" />
+        </div>
       </p>
     </form>
 
@@ -116,9 +120,11 @@
         <h5>IRB Protocol Study Team Lookup</h5>
       </div>
       <p>Look up IRB protocol study team members:</p>
-      <label>Study ID: <input name='studyId' size="20"/></label>
-      <input type="hidden" name="uids" value="${uids}" />
-      <input class="button button-blue btn mt-6" type="submit" name='goal' value="Lookup" />
+        <div style="display:flex; flex-direction: row; justify-content: center; align-items: center">
+          <label>Study ID: <input name='studyId' size="20"/></label>
+          <input type="hidden" name="uids" value="${uids}" />
+          <input class="button button-blue btn mt-6" type="submit" name='goal' value="Lookup" />
+        </div>
     </form>
 
     <form py:if="candidates or studyTeam" method="get" action="">
