--- a/heron_wsgi/templates/heron_layout.xml
+++ b/heron_wsgi/templates/heron_layout.xml
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="width: 75%">
       <div class="row">
         <div class="news-copy">
           <div class="x-up-card">
