add missed margin to input box

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -107,7 +107,7 @@
           <label style="padding-right:10px;">Last:</label>
           <input style="border-radius: 2px; width:20%; height:30px; margin-right:10px;" name='sn' />
           <label style="padding-right:10px;">ID:</label>
-          <input style="border-radius: 2px; width:10%; height:30px; padding-right:10px" name='cn' />
+          <input style="border-radius: 2px; width:10%; height:30px; margin-right:10px" name='cn' />
           <input class="button button-blue btn mt-6" type="submit" name='goal' value="Search" />
         </div>
       </p>
